@@ -67,9 +67,9 @@ bool CDVDPlayerVideo::OpenStream( CDVDStreamInfo &hint )
     m_autosync = 1; // avoid using frame time as we don't know it accurate
   }
 
-  if( m_fFrameRate > 100 )
+  if( m_fFrameRate > 100 || m_fFrameRate < 5 )
   {
-    CLog::Log(LOGERROR, "CDVDPlayerVideo::OpenStream - Invalid framerate %d, using forced 25fps", (int)m_fFrameRate);
+    CLog::Log(LOGERROR, "CDVDPlayerVideo::OpenStream - Invalid framerate %d, using forced 25fps and just trust timestamps", (int)m_fFrameRate);
     m_fFrameRate = 25;
     m_autosync = 1; // avoid using frame time as we don't know it accurate
   }
